feat(grid): tons of logic in it

--- a/popup.html
+++ b/popup.html
@@ -2,9 +2,9 @@
   <label>
     Grid:
     <select id="s-sel">
-      <option>row</option>
-      <option>col</option>
-      <option>all</option>
+      <option value="row">row</option>
+      <option value="col">col</option>
+      <option value="all">all</option>
     </select>
   </label>
   <label>
@@ -23,19 +23,19 @@
     <br />
     <input id="w-inp" type="number" />
     <select id="w-sel">
-      <option>px</option>
-      <option>cm</option>
-      <option>mm</option>
-      <option>in</option>
-      <option>pc</option>
-      <option>pt</option>
-      <option>ch</option>
-      <option>em</option>
-      <option>rem</option>
-      <option>vh</option>
-      <option>vw</option>
-      <option>vmin</option>
-      <option>vmax</option>
+      <option value="px">px</option>
+      <option value="cm">cm</option>
+      <option value="mm">mm</option>
+      <option value="in">in</option>
+      <option value="pc">pc</option>
+      <option value="pt">pt</option>
+      <option value="ch">ch</option>
+      <option value="em">em</option>
+      <option value="rem">rem</option>
+      <option value="vh">vh</option>
+      <option value="vw">vw</option>
+      <option value="vmin">vmin</option>
+      <option value="vmax">vmax</option>
     </select>
   </label>
   <br />
@@ -45,19 +45,19 @@
     <br />
     <input id="h-inp" type="number" />
     <select id="h-sel">
-      <option>px</option>
-      <option>cm</option>
-      <option>mm</option>
-      <option>in</option>
-      <option>pc</option>
-      <option>pt</option>
-      <option>ch</option>
-      <option>em</option>
-      <option>rem</option>
-      <option>vh</option>
-      <option>vw</option>
-      <option>vmin</option>
-      <option>vmax</option>
+      <option value="px">px</option>
+      <option value="cm">cm</option>
+      <option value="mm">mm</option>
+      <option value="in">in</option>
+      <option value="pc">pc</option>
+      <option value="pt">pt</option>
+      <option value="ch">ch</option>
+      <option value="em">em</option>
+      <option value="rem">rem</option>
+      <option value="vh">vh</option>
+      <option value="vw">vw</option>
+      <option value="vmin">vmin</option>
+      <option value="vmax">vmax</option>
     </select>
   </label>
   <br />
